# ai-design-2026

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  raise_the_bar_running_example_class_project.md  syllabus.md
docs/: about.html  ai_tools_integration.html  assessments.html  header.html  index.html  lecture-style.css  materials.html  project.html  scripts.js  style.css  syllabus.html  syllabus.md
docs/grading/: grading.md
docs/labs/01_hello_world/: 1_chat.py  2_streaming.py  3_voice.py  4_image.py  hello_world_3.0.html  history-of-evals.html
docs/labs/02_standalone_agents/: 1_stateless_agent.py  2_stateful_agent.py  3_agent_with_memory.py  4_agent_with_long_term_memory.py  L2_instructor_guide.md  stateless_agent.py  stateless_stateful_agents.html
docs/labs/03_ai-api/: Alonso Casati Chapter 6 WSDL UDDI.html  ai_tools_integration.html  ai_tools_integration.md  aoa.html  aoa2.html  gpt_propsal_for_abstractions.html  mcp-logging-observability.html  mcp_tutorial.html
docs/labs/04_eval/optimizing-in-the-dark/: glossary.html  glossary.md  index.html  index.md  part-1-structural-flaw.html  part-1-structural-flaw.md  part-2-cost-of-ignorance-draft.html  part-2-cost-of-ignorance-draft.md  part-2-cost-of-ignorance.html  part-2-cost-of-ignorance.md  part-2-cost-of-inaction.html  (+21 more)
docs/labs/10_lab_eval_session/: index.html
labs/ai-api/: mcp_tool_calling_and_ai_integration_surfaces.md
labs/hello_world/: hello_world.py
labs/standalone_agents/: agent_w_memory.py  lessons_1_4_agent_basics.md  stateful_agent.py
tests/: test_lesson_01.py
(+4 files in other folders)
